feat(server): add backend server for form submissions and email notifications
- Implement Express.js server with CORS and email functionality using Nodemailer
- Add API endpoints for community form and newsletter submissions
- Update frontend to use real API instead of mock responses
- Include comprehensive documentation for email setup and form integration
- Add new npm scripts for server management
- Update environment variables with email configuration options

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,27 @@
 
 # OpenAI API Key
 # Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=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
+OPENAI_API_KEY=your_actual_openai_api_key_here
 
 # Composio API Key
 # Get your API key from: https://app.composio.dev/settings
-COMPOSIO_API_KEY=ak_6KunJJEHfgRaLF9nDQS5
+COMPOSIO_API_KEY=your_actual_composio_api_key_here
+
+# Email Configuration (Choose one method)
+# Method 1: Gmail (Recommended for simplicity)
+GMAIL_USER=don@dhobdyjr.com
+GMAIL_APP_PASSWORD=D@622021gsuite
+
+# Method 2: Custom SMTP Server
+# SMTP_HOST=smtp.your-provider.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your_smtp_username
+# SMTP_PASSWORD=your_smtp_password
+
+# Where to send form submissions
+NOTIFICATION_EMAIL=don@dhobdyjr.com
+
+# Server Configuration
+PORT=3000
+NODE_ENV=development
