--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "composio": "node composio-integration.js",
-    "start": "python -m http.server 8000"
+    "start": "python -m http.server 8000",
+    "server": "node server.js",
+    "dev": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,10 @@
   "homepage": "https://github.com/dhobdy062/retrospxt-holdings-website#readme",
   "dependencies": {
     "@composio/core": "^0.1.39",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.5",
     "openai": "^5.11.0"
   }
 }
