docs(env): update example email credentials to use placeholders
Replace actual email credentials with generic placeholders in .env.example to prevent accidental use of real credentials in development environments.

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ COMPOSIO_API_KEY=your_actual_composio_api_key_here
 
 # Email Configuration (Choose one method)
 # Method 1: Gmail (Recommended for simplicity)
-GMAIL_USER=don@dhobdyjr.com
-GMAIL_APP_PASSWORD=D@622021gsuite
+GMAIL_USER= your_gmnail
+GMAIL_APP_PASSWORD= your_gmail_app_password
 
 # Method 2: Custom SMTP Server
 # SMTP_HOST=smtp.your-provider.com
