--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,12 @@ GMAIL_APP_PASSWORD= your_gmail_app_password
 # Where to send form submissions
 NOTIFICATION_EMAIL=don@dhobdyjr.com
 
+# VAPI Configuration
+# Get your API keys from: https://dashboard.vapi.ai/
+VAPI_PRIVATE_KEY=your_vapi_private_key_here
+VAPI_PUBLIC_KEY=your_vapi_public_key_here
+VAPI_PORT=3001
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
