--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "composio": "node composio-integration.js",
+    "vapi-server": "node vapi-server.js",
+    "vapi-mcp": "node vapi-mcp-config.js",
     "start": "python -m http.server 8000",
     "server": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "dev-with-vapi": "concurrently \"npm run server\" \"npm run vapi-server\""
   },
   "repository": {
     "type": "git",
@@ -24,10 +27,16 @@
   "homepage": "https://github.com/dhobdy062/retrospxt-holdings-website#readme",
   "dependencies": {
     "@composio/core": "^0.1.39",
+    "@modelcontextprotocol/sdk": "^1.17.1",
+    "@vapi-ai/server-sdk": "^0.10.0",
+    "@vapi-ai/web": "^2.3.8",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "nodemailer": "^7.0.5",
     "openai": "^5.11.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.0"
   }
 }
