--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,11 @@
 
 # OpenAI API Key
 # Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=OPENAI_API_KEY=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
-
+OPENAI_API_KEY=sk-
 
 # Composio API Key
 # Get your API key from: https://app.composio.dev/settings
-COMPOSIO_API_KEY=ak_6KunJJEHfgRaLF9nDQS5
+COMPOSIO_API_KEY=ak_
 
 # Email Configuration (Choose one method)
 # Method 1: Gmail (Recommended for simplicity)
